--- a/styles/pages/index.css
+++ b/styles/pages/index.css
@@ -2,4 +2,5 @@
 @import '../uteis/index.css'; 
 /* Folder Components*/
 @import url('../components/status-bar.css');
+@import url('../components/bottom-navbar.css');
 
