--- a/styles/pages/index.css
+++ b/styles/pages/index.css
@@ -4,3 +4,4 @@
 @import url('../components/status-bar.css');
 @import url('../components/bottom-navbar.css');
 @import '../components/movie.css';
+@import '../components/navibar.css';
