--- a/styles/pages/index.css
+++ b/styles/pages/index.css
@@ -5,3 +5,4 @@
 @import url('../components/bottom-navbar.css');
 @import '../components/movie.css';
 @import '../components/navibar.css';
+@import '../components/play.css';
