feat: search movies components

--- a/styles/pages/index.css
+++ b/styles/pages/index.css
@@ -6,3 +6,4 @@
 @import '../components/movie.css';
 @import '../components/navibar.css';
 @import '../components/play.css';
+@import '../components/search-movie.css';
