--- a/styles/components/profile.css
+++ b/styles/components/profile.css
@@ -20,3 +20,16 @@
     color: burlywood;
     margin-top: 5px;
 }
+
+
+.profile--grid {
+    display: grid;
+    grid-gap: 22px;
+    grid-template-columns: 100px 100px;
+    justify-content: center;
+}
+
+.profile__img--big {
+    width: 100px;
+    height: 92px;
+}
