--- a/styles/components/profile.css
+++ b/styles/components/profile.css
@@ -13,6 +13,11 @@
 .profile__img {
     width: 65px;
     height: 60px;
+    transition: transform ease-in-out 150ms;
+}
+
+.profile__img:hover {
+    transform: scale(1.2);
 }
 
 .profile__text {
