feat: search input component

--- a/styles/pages/index.css
+++ b/styles/pages/index.css
@@ -7,3 +7,4 @@
 @import '../components/navibar.css';
 @import '../components/play.css';
 @import '../components/search-movie.css';
+@import '../components/search-input.css';
