--- a/styles/pages/index.css
+++ b/styles/pages/index.css
@@ -8,3 +8,25 @@
 @import '../components/play.css';
 @import '../components/search-movie.css';
 @import '../components/search-input.css';
+@import '../components/logo.css';
+
+.center {
+    display: flex;
+    height: calc(100vh - 44px);
+    justify-content: center;
+}
+
+.logo {
+    animation: load 1500ms ease-in-out;
+}
+
+@keyframes load {
+    from{
+        opacity: 0;
+        transform: scale(0.5);
+    }
+    to {
+        opacity: 1;
+        transform: 1;
+    }
+}
