--- a/styles/components/bottom-navbar.css
+++ b/styles/components/bottom-navbar.css
@@ -25,3 +25,12 @@
     text-align: center;
     margin-top: 2px;
 }
+
+.bottom-navbar__text--active {
+    color: white;
+    font-size: 8px;
+    font-style: normal;
+    font-weight: 500;
+    text-align: center;
+    margin-top: 2px;
+}
