--- a/styles/uteis/index.css
+++ b/styles/uteis/index.css
@@ -1,6 +1,9 @@
 /* Set the font */
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
 /* pasta uteis */
 @import url('../uteis/reset.css');
 @import url('../uteis/general.css');
+
+/* fonte antiga
+https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap */ 
